--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Agustina Regular";
 }
 
 
@@ -16,12 +16,14 @@
 
 .navbar1
 {
-    background-color: rgb(121, 103, 136);
+    background-color: rgb(148, 127, 164);
     width: 100%;
     padding: 5px 0px;
     position: fixed;
     z-index: 9999;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(98, 97, 97, 0.19);
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
 }
 
 .navbar-logo
@@ -29,19 +31,41 @@
     padding: 10px 0px 10px 50px;
     margin-left: 30px; 
     color: rgb(244, 243, 246); 
+    font-family: "Agustina Regular";
+    font-optical-sizing:inherit;
+    font-weight: 500;
+    font-style:italic;
+    text-shadow: 2px 2px 2px rgb(98, 96, 96);
 }
+
 
 
 li
 {
     display: inline-block;
-    padding: 10px 40px 10px 0px;
+    padding: 10px 0px 0px 40px;
 }
+
 
 ul li a
 {
     text-decoration: none;
     color: rgb(244, 243, 246);
+    padding: 20px;
+    border: transparent solid 3px;
+    /* border-radius: 5px; */
+    transition: 0.5s;
+}
+
+
+ul li a:hover
+{
+    text-decoration: none;
+    color: rgb(244, 243, 246);
+    /* background-color: grey; */
+    padding: 20px 20px 10px 20px ;
+    border-bottom: rgb(111, 110, 111) solid 3px;
+    /* border-radius: 5px; */
 }
 
 .home-card
@@ -86,7 +110,7 @@ ul li a
 .home-intro  button
 {
     padding: 10px 30px;
-    margin: 40px 10px 0px 0px;
+    margin: 40px 10px 10px 0px;
     background-color: rgb(188, 165, 207);
     border-radius: 15px ;
     border:solid 2px rgb(190, 189, 189);
@@ -97,7 +121,7 @@ ul li a
 .home-intro  button:hover
 {
     padding: 10px 30px;
-    margin: 40px 10px 0px 0px;
+    margin: 40px 10px 10px 0px;
     background-color: rgb(148, 148, 149);
     border-radius: 15px ;
     border:solid 2px rgb(190, 189, 189);
@@ -137,7 +161,7 @@ ul li a
 
 .leftSide
 {
-    border-right: 2px solid rgb(211, 211, 211);
+    
     width: 40%;
     padding-top: 60px;
   
@@ -164,7 +188,7 @@ ul li a
 {
     
     width: 60%;
-   
+   border-left: 2px solid rgb(221, 220, 220);
   
 }
 
@@ -181,8 +205,7 @@ ul li a
   
   padding-right: 60px;
   width: 20%;
-  
-  margin-bottom: 30;
+  margin-bottom: 30px;
 }
 
 
@@ -226,9 +249,117 @@ ul li a
 {
     border-radius: 10px;
     border: 2px solid transparent;
-    padding: 20px 0px 30px 70px ;
+    padding: 20px 60px 30px 60px ;
     width: 90%;
     margin: auto;
     margin-top: 150px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgb(126, 125, 128);
+}
+
+/* --------------------------------------------------------------------------- */
+.pageintro-proj
+{
+   padding: 3px 0px 30px 0px;
+   color: gray;
+   width: 100%;
+   
+}
+
+.projects
+{
+    padding: 30px 0px;
+
+}
+
+ .pageintro-proj button
+{
+    padding: 10px 15px;
+    margin: 5px 10px 30px 0px;
+    background-color: rgb(188, 165, 207);
+    border-radius: 15px ;
+    border:solid 2px rgb(190, 189, 189);
+    color:rgb(244, 243, 246) ;
+    transition: 1s;
+}
+
+.pageintro-proj button:hover
+{
+    padding: 10px 15px;
+    margin: 5px 10px 30px 0px;
+    background-color: rgb(148, 148, 149);
+    border-radius: 15px ;
+    border:solid 2px rgb(190, 189, 189);
+    color:rgb(244, 243, 246) ;
+}
+
+.pageintro-proj button a
+{
+    text-decoration: none;
+    color:rgb(244, 243, 246) ;
+}
+
+.pageintro h1 
+{
+  color: gray;
+  padding-bottom: 2px;
+  border-bottom: 2px solid rgb(159, 158, 158);
+  
+}
+
+.pageintro-proj h1 
+{
+  color: gray;
+  padding-bottom: 2px;
+  border-bottom: 2px solid rgb(159, 158, 158);
+  
+}
+
+.projects h2 
+{
+    color: rgb(188, 165, 207) ;
+}
+/* .projects .img
+{
+    width: 400px;
+    height: 180px ;
+    
+} */
+
+.page-card-proj
+{
+    border-radius: 10px;
+    border: 2px solid transparent;
+    padding: 20px 60px 30px 60px ;
+    width: 90%;
+    margin: auto;
+    margin-top: 130px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgb(126, 125, 128);
+}
+
+.line1
+{
+    width: 50%;
+    background-color: gray;
+    height: 1px;
+    padding: 1px 0px;
+    margin: auto;
+}
+
+.projects
+{
+    transition: 1s;
+    margin-top: 20px;
+    padding: 15px 20px 0px 20px;
+    margin: 30px 0px 30px 0px;
+    border-radius: 5px;
+    
+}
+.projects:hover
+{
+    transform: scale(1.01 , 1.01);
+    border-radius: 5px;
+    padding: 15px 20px 0px 20px;
+    box-shadow: 0 4px 8px 0 rgba(38, 38, 38, 0.2), 0 6px 20px 0 rgb(166, 166, 167);
+    margin: 30px 0px 30px 0px;
+   
 }
