--- a/app/globals.css
+++ b/app/globals.css
@@ -145,6 +145,8 @@ ul li a:hover
    padding-bottom: 30px;
    text-align: center;
    width: 100%;
+   display: flex;
+   justify-content:space-around;
 }
 
 .home-img img
