--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@ ul li a
 {
     text-decoration: none;
     color: rgb(244, 243, 246);
-    padding: 20px;
+    padding: 20px 20px 10px 20px ;
     border: transparent solid 3px;
     /* border-radius: 5px; */
     transition: 0.5s;
