--- a/app/globals.css
+++ b/app/globals.css
@@ -8,15 +8,16 @@
 }
 
 
-.content
+
+/* .content
 {
     height: 100vh;
     background-color: white;
-}
+} */
 
 .navbar1
 {
-    background-color: rgb(148, 127, 164);
+    background-color: rgb(169, 149, 185) ;
     width: 100%;
     padding: 5px 0px;
     position: fixed;
@@ -72,14 +73,14 @@ ul li a:hover
 
 .home-card
 {
-    border-radius: 10px;
-    border: 2px solid transparent;
+    /* border-radius: 10px; */
+    /* border: 2px solid transparent; */
     padding: 40px 30px 0px 30px ;
     width: 90%;
     margin: auto;
     margin-top: 150px;
     margin-bottom: 50px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgb(126, 125, 128);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgb(126, 125, 128); */
 }
 
 
