--- a/app/globals.css
+++ b/app/globals.css
@@ -182,6 +182,9 @@ ul li a:hover
     border-radius: 50%;
     border:solid 2px rgb(190, 189, 189);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgb(168, 143, 188);
+    pointer-events: none; 
+    user-select: none;    
+   -webkit-user-drag: none;
 }
 
 
