--- a/app/globals.css
+++ b/app/globals.css
@@ -83,7 +83,7 @@ ul li a:hover
 {
     /* border-radius: 10px; */
     /* border: 2px solid transparent; */
-    padding: 40px 30px 0px 30px ;
+    padding: 30px 30px 0px 30px ;
     width: 90%;
     margin: auto;
     margin-top: 150px;
@@ -188,9 +188,13 @@ ul li a:hover
     
     width: 330px;
     height: 330px;
-    /* border-radius: 50%; */
-    /* border:solid 2px rgb(190, 189, 189);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgb(168, 143, 188); */
+
+
+    border-radius: 50%;
+    border:solid 2px rgb(190, 189, 189);  
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgb(168, 143, 188);
+
+
     pointer-events: none; 
     user-select: none;    
    -webkit-user-drag: none;
